--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="container-fluid" style="background-color: #08D9D6">
           <div class="container">
           <h2>Happy birthday Mummy</h2>
-          <p>Its your Borthday. I appreciate all you have done to keep this Family safe and well for the longest time, Thankyou for the advice and unconditional love and support and everything you have given me.     
+          <p>Its your Birthday. I appreciate all you have done to keep this Family safe and well for the longest time, Thankyou for the advice and unconditional love and support and everything you have given me.     
         </p>
           <div class="photo-section">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
